--- a/erasmus/src/erasmus/courses/templates/courses/courses.html
+++ b/erasmus/src/erasmus/courses/templates/courses/courses.html
@@ -42,13 +42,13 @@
 
         <h2>Add Course</h2>
         <div class="buttons">
-            <button type="button" onclick="toggle1(this);">Add Previously Added Course</button>
-            <button type="button" onclick="toggle2(this);">Add New Course</button>
-            <button type="button" onclick="toggle3(this);">Merge Courses</button>
+            <button type="button" onclick="toggleButtons(this, 3)" id="1">Add Previously Added Course</button>
+            <button type="button" onclick="toggleButtons(this, 3)" id="2">Add New Course</button>
+            <button type="button" onclick="toggleButtons(this, 3)" id="3">Merge Courses</button>
         </div>
 
-        <div hidden="hidden" id="course_table">
-            <input type="text" id="filter_input" onkeyup="filter()" style="width:100%" placeholder="Search for courses..">
+        <div hidden="hidden" id="toggle-element-1">
+            <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
@@ -75,7 +75,7 @@
             </table>
         </div>
 
-        <form hidden="hidden" id="myform" action="/action_page.php">
+        <form hidden="hidden" id="toggle-element-2" action="/action_page.php">
 
             <label for="cname">Course Name:</label><br>
             <input type="text" id="cname" name="cname"><br>
@@ -95,8 +95,7 @@
             <input style="width:20%" type="submit" value="Submit">
         </form>
 
-        <div>
-            <table hidden="hidden" id="taken_courses_table_merge" style="width:100%">
+        <table hidden="hidden" id="toggle-element-3" style="width:100%">
                 <thead>
                 <tr>
                     <th style="width:65px">Count</th>
@@ -120,7 +119,6 @@
                 {%endfor%}
                 </tbody>
             </table>
-        </div>
     </div>
 </div>
 {% endblock %}
