--- a/erasmus/src/erasmus/courses/templates/courses/documents.html
+++ b/erasmus/src/erasmus/courses/templates/courses/documents.html
@@ -3,7 +3,7 @@
 <div class="header">Files</div>
 <div class="page_content">
     <div id="course_table">
-            <input type="text" id="filter_input" onkeyup="filter()" style="width:100%" placeholder="Search for courses..">
+            <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for courses..">
             <table id="filtered_list" style="width:100%">
                 <thead>
                 <tr>
