--- a/erasmus/src/erasmus/courses/templates/courses/home.html
+++ b/erasmus/src/erasmus/courses/templates/courses/home.html
@@ -1,14 +1,172 @@
 {% extends 'accounts/navbar.html' %}
 {% load crispy_forms_tags %}
 
-{% load static %}
-{% block stylesheet %}
-    <link rel="stylesheet" href="{% static 'styles.css' %}">
-    <link rel="stylesheet" href="{% static 'home_style.css' %}">
-{% endblock %}
-
 {% block main_content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title>login</title>
+    <!--Stylesheet-->
+    <style media="screen">
+
+*{
+	padding: 0;
+	margin: 0;
+}
+
+section
+{
+    float: left;
+    
+    background: rgb(246, 245, 255);
+}
+.mainBox
+{
+    margin-top: 3px;
+    margin-left: 10px;
+
+    background: rgb(246, 245, 255);
+
+    display: grid; 
+    grid-template-rows: 60px 180px;
+}
+.status
+{
+    display: grid; 
+    grid-template-columns: 14% 65% 50%;
+
+    width: 100%;
+
+    margin-top: 1%;
+}
+.statusLabel
+{
+    margin-top: 14px;
+    font-size: 35px;
+}
+.statusBox
+{
+    margin-top: 5px;
+    display: block;
+    border-style: outset;
+    width: max-content;
+    height: 40px;
+
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    background-color: rgb(254, 255, 245);
+}
+.toDoandDone
+{
+    width: 100%;
+    margin-top: 10px;
+    margin-left: 0%;
+    display: grid; 
+    grid-template-columns: 1fr 1fr; 
+
+    height: 200px;
+    border: 0ch;
+}
+.toDo
+{   
+    display: block;
+    border: solid;
+    border-color: 1px solid rgba(0,0,0,0.05);
+    width: 500px;
+    height: 280px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+.toDoLabel
+{
+    margin-left: 40%;
+    margin-top: 20;
+}
+.done
+{
+    display: block;
+    border: solid;
+    border-color: 1px solid rgba(0,0,0,0.05);
+    width: 500px;
+    height: 280px;
+    overflow-x: auto;
+    overflow-y: auto;
+}
+.doneList
+{
+    margin-left: 3%;
+}
+.doneLabel
+{
+    margin-left: 40%;
+    margin-top: 20;
+}
+.addToDo
+{
+    margin-left: 75%;
+    margin-top: 10px;
+    width: fit-content;
+}
+/* The popup form - hidden by default */
+.form-popup {
+  display: none;
+  position: fixed;
+  bottom: 110;
+  right: 400px;
+  border: 3px solid #f1f1f1;
+  z-index: 9;
+}
+
+/* Add styles to the form container */
+.form-container 
+{
+  max-width: 300px;
+  padding: 10px;
+  background-color: rgb(17, 0, 39);
+  border-style:ridge;
+}
+
+/* Full-width input fields */
+.form-container input[type=text], .form-container input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+}
+
+/* When the inputs get focus, do something */
+.form-container input[type=text]:focus, .form-container input[type=password]:focus {
+  outline: none;
+}
+
+/* Set a style for the submit/login button */
+.form-container .btn {
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+  opacity: 0.8;
+}
+
+/* Add a red background color to the cancel button */
+.form-container .cancel 
+{
+  background-color: rgb(228, 12, 12);
+  color: #f1f1f1;
+}
+
+/* Add some hover effects to buttons */
+.form-container .btn:hover, .open-button:hover 
+{
+  opacity: 1;
+}
+    </style>
+
 <div class = "mainBox">
+
     <div class = "status">
         <h1 class = "statusLabel"> Status:</h1>
         <div class = "statusBox">
@@ -30,49 +188,33 @@
 
         <section class = "toDo">
             <div class = "toDoList">
-            {% for toDo in todo %}
+                <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for To Do">
+                <label>Add a todo to your db to display</label><br>
+                {% for toDo in todo %}
 
-                <p> {{toDo.header}}</p>
-                <li><a href='/todo-state/{{toDo.pk}}/1/'><i class="fas fa-times"></i>Mark as done</a></li>
+                <input type = "checkbox">
+                <label> {{toDo.header}}</label>
+                <label><a href='/todo-state/{{toDo.pk}}/1/'><i class="fas fa-times"></i>Mark as done</a></label><br>
+                <label> Explanation: {{toDo.body}}</label><br>
+                <label> Due Date: {{toDo.due_date}}</label><br>
+                <br>
 
-            {%endfor%}
+                {%endfor%}
             </div>
         </section>
 
         <section class = "done">
             <div class = "doneList">
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
-                <input type = "checkbox">
-                <label for = "t"> Done this</label><br>
+                <input type="text" id="filter_input" onkeyup="filterTable()" style="width:100%" placeholder="Search for Done">
+                {% for toDo in todo %}
 
-                {% for course in courses %}
-                    <p> {{course.course_name}}</p>
-                {%endfor%}
+                <input type = "checkbox">
+                <label> {{toDo.header}}</label><br>
+                <label> Explanation: {{toDo.body}}</label><br>
+                <label> Due Date: {{toDo.due_date}}</label><br>
+                <br>
+
+                {% endfor %}
             </div>
         </section>
 
